pybars NEWS
+++++++++++

Changes and improvements to pybars, grouped by release.

NEXT
----

0.0.3
-----

* Support for '{{else}}' in the 'if' blockhelper.
  (David Smith, Robert Collins, lp:1053534)

0.0.2
-----

* Add support for '{{else}}'. (Mjumbe Wawatu Ukweli, lp:997180)

* Bump dependency on PyMeta to 0.5.0. (Robert Collins)

0.0.1
-----

* Initial release, passes acceptance tests from handlebars.js, except for
  deliberately skipped features (.data hashes and stringParams).
  (Robert Collins)
